Updated files needed for JmultTable

--- a/Jtable.html
+++ b/Jtable.html
@@ -47,19 +47,19 @@ Copyright(c) 25 November 2018. All rights reserved.-->
 									messages: {
 										loY: {
 											required: "A lower vertical bound is required.",
-											digits: "Please enter a valid integer."
+											digits: "Please enter a valid integer greater than zero."
 										},
 										upY: {
 											required: "An upper vertical bound is required.",
-											digits: "Please enter a valid integer."
+											digits: "Please enter a valid integer greater than zero."
 										},
 										loX: {
 											required: "A lower horizontal bound is required.",
-											digits: "Please enter a valid integer."
+											digits: "Please enter a valid integer greater than zero."
 										},
 										upX: {
 											required: "An upper horizontal bound is required.",
-											digits: "Please enter a valid integer."
+											digits: "Please enter a valid integer greater than zero."
 										}
 									},
 									submitHandler: function(form){
